Remove AAF from drools-pdp
Issue-ID: POLICY-4592
Change-Id: Ibe7fb63017f862bdab4a80444a00324040b1ab87
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>